feat : Added html rules in order to display the result in the window using the DOM

--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mixed Messages</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 class="logo">Mixed Message</h1>
+    </header>
+    <main>
+      <section>
+        <h2>
+          Cette app vous donne des messages inspirant de manière totalement
+          aléatoire.
+        </h2>
+        <p>
+          Tout ce que vous avez à faire est d'appuyer sur le bouton "Go" juste
+          en bas!
+        </p>
+        <button type="submit" id="btn">Go</button>
+        <div class="boxMessage" id="boxMessage">
+          <p class="message" id="message">
+            “On a deux vies. La deuxième commence quand on réalise qu’on n’en a
+            qu’une.” Confucius
+          </p>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
