feat : connection of html to javascript, add of others property in style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           Tout ce que vous avez à faire est d'appuyer sur le bouton "Go" juste
           en bas!
         </p>
-        <button type="submit" id="btn">Go</button>
+        <button type="button" id="btn">Go</button>
         <div class="boxMessage" id="boxMessage">
           <p class="message" id="message">
             “On a deux vies. La deuxième commence quand on réalise qu’on n’en a
@@ -29,5 +29,6 @@
         </div>
       </section>
     </main>
+    <script src="./index.js"></script>
   </body>
 </html>
